--- a/requirements.txt
+++ b/requirements.txt
@@ -142,7 +142,7 @@ scikit-learn==1.2.2
 scipy==1.10.1
 sgmllib3k==1.0.0
 six==1.16.0
-sklearn==0.0.post1
+scikit-learn==1.2.2
 smart-open==6.3.0
 smmap==5.0.0
 soupsieve==2.4.1
